--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,9 +24,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>70</y>
+      <y>109</y>
       <width>260</width>
-      <height>380</height>
+      <height>341</height>
      </rect>
     </property>
    </widget>
@@ -86,9 +86,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>70</y>
+      <y>109</y>
       <width>260</width>
-      <height>380</height>
+      <height>341</height>
      </rect>
     </property>
    </widget>
@@ -96,18 +96,18 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>70</y>
+      <y>109</y>
       <width>260</width>
-      <height>380</height>
+      <height>341</height>
      </rect>
     </property>
    </widget>
    <widget class="QLineEdit" name="bookEdit">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>20</x>
       <y>70</y>
-      <width>113</width>
+      <width>130</width>
       <height>21</height>
      </rect>
     </property>
@@ -115,9 +115,9 @@
    <widget class="QLineEdit" name="userEdit">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>20</x>
       <y>70</y>
-      <width>113</width>
+      <width>130</width>
       <height>21</height>
      </rect>
     </property>
@@ -125,9 +125,9 @@
    <widget class="QLineEdit" name="bookEdit2">
     <property name="geometry">
      <rect>
-      <x>450</x>
+      <x>150</x>
       <y>70</y>
-      <width>113</width>
+      <width>130</width>
       <height>21</height>
      </rect>
     </property>
@@ -135,9 +135,9 @@
    <widget class="QLineEdit" name="userEdit2">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>20</x>
       <y>70</y>
-      <width>113</width>
+      <width>130</width>
       <height>21</height>
      </rect>
     </property>
@@ -146,8 +146,8 @@
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>230</y>
-      <width>80</width>
+      <y>130</y>
+      <width>131</width>
       <height>24</height>
      </rect>
     </property>
@@ -155,9 +155,9 @@
    <widget class="QComboBox" name="rentBookCombo">
     <property name="geometry">
      <rect>
-      <x>430</x>
-      <y>230</y>
-      <width>80</width>
+      <x>440</x>
+      <y>130</y>
+      <width>131</width>
       <height>24</height>
      </rect>
     </property>
@@ -166,34 +166,34 @@
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>260</y>
+      <y>160</y>
       <width>75</width>
-      <height>24</height>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>Add</string>
     </property>
    </widget>
    <widget class="QPushButton" name="returnButton">
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>380</y>
+      <y>280</y>
       <width>75</width>
-      <height>24</height>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>Remove</string>
     </property>
    </widget>
    <widget class="QComboBox" name="returnUserCombo">
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>340</y>
-      <width>80</width>
+      <y>250</y>
+      <width>131</width>
       <height>24</height>
      </rect>
     </property>
@@ -201,50 +201,181 @@
    <widget class="QComboBox" name="returnBookCombo">
     <property name="geometry">
      <rect>
-      <x>430</x>
-      <y>340</y>
-      <width>80</width>
+      <x>440</x>
+      <y>250</y>
+      <width>131</width>
       <height>24</height>
      </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="manageButton">
-    <property name="geometry">
-     <rect>
-      <x>300</x>
-      <y>170</y>
-      <width>75</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>manage</string>
     </property>
    </widget>
    <widget class="QLabel" name="rentalText1">
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>210</y>
+      <y>110</y>
       <width>71</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>add rental</string>
+     <string>Add rental</string>
     </property>
    </widget>
    <widget class="QLabel" name="rentalText2">
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>320</y>
+      <y>230</y>
       <width>81</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>remove rental</string>
+     <string>Remove rental</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="addBookButton">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>160</y>
+      <width>75</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Add</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="addUserButton">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>160</y>
+      <width>75</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Add</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="addUserEdit">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>130</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="addBookEdit">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>130</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="userText">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>110</y>
+      <width>61</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Add user</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="bookText">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>110</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Add book</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="userText2">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>230</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Remove user</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="bookText2">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>230</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Remove book</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="removeUserButton">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>280</y>
+      <width>75</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Remove</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="removeBookButton">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>280</y>
+      <width>75</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Remove</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="removeUserCombo">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>250</y>
+      <width>131</width>
+      <height>24</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="removeBookCombo">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>250</y>
+      <width>131</width>
+      <height>24</height>
+     </rect>
     </property>
    </widget>
   </widget>
